Renames package and updates documentation paths.
Updates the NuGet package identifier and corresponding documentation paths throughout the codebase and documentation.

This change ensures consistency and accuracy in package naming and documentation referencing, improving the user experience and maintainability.

--- a/src/Khaos.Processing.Pipelines/buildTransitive/Khaos.Processing.Pipelines.docs.targets
+++ b/src/Khaos.Processing.Pipelines/buildTransitive/Khaos.Processing.Pipelines.docs.targets
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <KhaosDocsPackageName>KhaosCode.Processing.Pipelines.xxx</KhaosDocsPackageName>
+    <KhaosDocsPackageName>KhaosCode.Processing.Pipelines</KhaosDocsPackageName>
   </PropertyGroup>
 
   <Target Name="KhaosProcessingPipelines_CopyDocs"
