--- a/src/Khaos.Processing.Pipelines/Khaos.Processing.Pipelines.csproj
+++ b/src/Khaos.Processing.Pipelines/Khaos.Processing.Pipelines.csproj
@@ -7,7 +7,7 @@
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <IsPackable>true</IsPackable>
-    <PackageId>KhaosCode.Processing.Pipelines.xxx</PackageId>
+    <PackageId>KhaosCode.Processing.Pipelines</PackageId>
     <Description>Composable high-performance processing pipelines with batch execution support.</Description>
     <PackageTags>pipelines;workflow;batch;processing</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -30,7 +30,7 @@
           Visible="false"
           Pack="true"
           PackagePath="buildTransitive/" />
-        <None Include="buildTransitive\KhaosCode.Processing.Pipelines.xxx.targets"
+        <None Include="buildTransitive\KhaosCode.Processing.Pipelines.targets"
           Visible="false"
           Pack="true"
           PackagePath="buildTransitive/" />
