Add reference to Khaos.Pipeline.Abstractions - PipelineContext now implements IPipelineContext - Added implicit conversions between local and abstraction StepOutcome types - Added Contains, Remove, Clear methods to PipelineContext

--- a/src/Khaos.Processing.Pipelines/Khaos.Processing.Pipelines.csproj
+++ b/src/Khaos.Processing.Pipelines/Khaos.Processing.Pipelines.csproj
@@ -14,6 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Khaos.Pipeline.Abstractions\src\Khaos.Pipeline.Abstractions\Khaos.Pipeline.Abstractions.csproj"
+                      Condition="Exists('..\..\..\Khaos.Pipeline.Abstractions\src\Khaos.Pipeline.Abstractions\Khaos.Pipeline.Abstractions.csproj')" />
+    <PackageReference Include="KhaosCode.Pipeline.Abstractions" Version="0.*"
+                      Condition="!Exists('..\..\..\Khaos.Pipeline.Abstractions\src\Khaos.Pipeline.Abstractions\Khaos.Pipeline.Abstractions.csproj')" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\..\README.md"
           Visible="false"
           Pack="true"
